--- a/public/index.css
+++ b/public/index.css
@@ -39,6 +39,7 @@
   width: 1200px;
   margin: 15px;
   height: 300px;
+  justify-content: center;
 }
 .fact-page {
   display: flex;
@@ -77,4 +78,147 @@
 .product-title {
   display: flex;
   justify-content: center;
+}
+
+.body_con {
+  background: linear-gradient(to right, rgb(255, 167, 35), rgb(255, 97, 35));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 90%;
+  width: 1200px;
+  background-color: white;
+  box-shadow: 0 5px 10px black;
+  border-radius: 5px;
+}
+
+.content {
+  padding: 40px;
+  margin-top: 50px;
+}
+
+.header {
+  background-color: #222;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.icon-container {
+  position: relative;
+  top: 70px;
+  padding: 20px;
+  background-color: white;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+}
+
+.general-information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.status {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.location {
+  font-size: 2rem;
+  font-weight: normal;
+  margin-top: 10px;
+}
+
+.detail-section {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 0;
+  flex-grow: 1;
+  padding: 20px;
+}
+
+.detail.bordered {
+  border-left: 1px solid #777;
+  border-right: 1px solid #777;
+}
+
+.detail .title {
+  font-size: 2rem;
+  flex-grow: 1;
+  font-weight: bold;
+  color: #777;
+}
+
+.detail .value {
+  font-size: 2rem;
+  margin-top: 20px;
+}
+
+.city-search-container {
+  display: flex;
+  justify-content: center;
+}
+
+.city-search {
+  margin-top: 40px;
+  font-size: 2rem;
+  outline: none;
+  border: 1px solid #777;
+  border-radius: 5px;
+  padding: 10px 15px;
+  width: 100%;
+}
+
+.pac-item {
+  font-size: 2rem;
+  padding: 10px 10px;
+}
+
+.pac-icon {
+  display: none;
+}
+
+.pac-item-query {
+  font-size: 2rem;
+  padding-right: 14px;
+}
+
+.darksky-logo {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  color: #333;
+  font-size: 1.5rem;
+}
+
+.chuck_page {
+  background: linear-gradient(to right, rgb(255, 167, 35), rgb(255, 97, 35));
+  width: 1200px;
+  display: flex;
+  flex-flow: wrap;
+}
+
+#texting {
+  font-family: Helvetica, sans-serif;
+  width: 50%;
+  font-size: x-large;
 }
